--- a/task-management-system/src/app/homepage/homepage.component.html
+++ b/task-management-system/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar" data-aos="fade-down" data-aos-delay="500">
-  <h1 class="navbar__logo">Logo</h1>
+  <h1 class="navbar__logo">Task Manager</h1>
   <button class="navbar__btn" [routerLink]="['/login-signup']">Login</button>
 </nav>
 <main>
