--- a/task-management-system/src/app/task-list/task-list.component.html
+++ b/task-management-system/src/app/task-list/task-list.component.html
@@ -2,6 +2,7 @@
   <table>
     <thead>
       <tr>
+        <th>Task ID</th>
         <th>Title</th>
         <th>Description</th>
         <th>Due Date</th>
@@ -12,6 +13,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let task of tasks">
+        <td>{{ task.id }}</td>
         <td>{{ task.title }}</td>
         <td>{{ task.description }}</td>
         <td>{{ task.dueDate }}</td>
